[package]
name = "godbolt-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.12", features = ["json"] }
serde = {veresioin = "1.0.147", features=["serde_derive"]}
serde_json = "1.0.87"
tokio = { version = "1.21.2", features = ["macros"] }
serde-this-or-that = "0.4.0"